# libdvdnav

./: .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  README.markdown  README.md  configure.ac
SMC/: config.h  libdvdnav.def  libdvdnav.sln  libdvdnav.vcxproj  libdvdnav.vcxproj.filters  version.h
SMP/: SMP.patch  config.h  libdvdnav.def  libdvdnav.sln  libdvdnav.vcxproj  libdvdnav.vcxproj.filters  libdvdnav_deps.sln  libdvdnav_files.props  libdvdnav_winrt.vcxproj  libdvdnav_winrt.vcxproj.filters  libdvdnav_with_latest_sdk.bat  project_get_dependencies.bat  readme.txt  version.h
examples/: menus.c
misc/: dvdnavmini.pc
msvc/: libwin32utils.dsp
src/: dvdnav.c  dvdnav_internal.h  highlight.c  navigation.c  read_cache.c  remap.c  remap.h  searching.c
src/dvdnav/: dvdnav.h
src/vm/: decoder.c  decoder.h  getset.c  play.c  vm.c  vm.h  vmcmd.c  vmget.c
